Update Alpaca API integration and dependencies
Refactor code to align with new Alpaca OpenAPI changes, replacing deprecated methods and classes. Upgraded libraries and dependencies for improved compatibility and performance, including migration to Jakarta for persistence annotations. Additionally, adjusted configuration properties and fixed several inconsistencies in data handling.