@@ -1,20 +1,18 @@
 package com.jessethouin.quant.alpaca;
 
+import com.google.gson.JsonObject;
+import com.google.gson.JsonParser;
 import com.jessethouin.quant.beans.*;
 import com.jessethouin.quant.broker.Util;
-import com.jessethouin.quant.conf.AssetClassType;
 import com.jessethouin.quant.conf.CurrencyType;
-import net.jacobpeterson.alpaca.model.endpoint.account.Account;
-import net.jacobpeterson.alpaca.model.endpoint.common.enums.SortDirection;
-import net.jacobpeterson.alpaca.model.endpoint.orders.Order;
-import net.jacobpeterson.alpaca.model.endpoint.orders.enums.CurrentOrderStatus;
-import net.jacobpeterson.alpaca.model.endpoint.positions.Position;
-import net.jacobpeterson.alpaca.rest.AlpacaClientException;
+import net.jacobpeterson.alpaca.openapi.marketdata.model.Sort;
+import net.jacobpeterson.alpaca.openapi.trader.model.*;
+import net.jacobpeterson.alpaca.openapi.trader.ApiException;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 import java.math.BigDecimal;
-import java.time.ZonedDateTime;
+import java.time.OffsetDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Date;
@@ -29,24 +27,33 @@ public class AlpacaUtil {
         try {
             reconcilePositions(portfolio);
             reconcileOrders(portfolio);
-            reconcileCurrency(portfolio, ALPACA_ACCOUNT_API.get().getCurrency(), new BigDecimal(ALPACA_ACCOUNT_API.get().getCash()), CurrencyType.FIAT);
-        } catch (AlpacaClientException e) {
+            String currency = ALPACA_ACCOUNT_API.getAccount().getCurrency();
+            String cash = ALPACA_ACCOUNT_API.getAccount().getCash();
+            if (cash != null) {
+                reconcileCurrency(portfolio, currency, new BigDecimal(cash), CurrencyType.FIAT);
+            }
+        } catch (ApiException e) {
             LOG.error(e.getLocalizedMessage());
         }
     }
 
-    private static void reconcileOrders(Portfolio portfolio) throws AlpacaClientException {
+    private static void reconcileOrders(Portfolio portfolio) throws ApiException {
         portfolio.getAlpacaOrders().clear();
 
-        List<Order> orders = ALPACA_ORDERS_API.get(CurrentOrderStatus.OPEN, 50, null, ZonedDateTime.now(), SortDirection.ASCENDING, Boolean.TRUE, null);
-        while (orders.size() > 0) {
+        List<Order> orders = ALPACA_ORDERS_API.getAllOrders(OrderStatus.NEW.getValue(), 50, null, OffsetDateTime.now().toString(), Sort.ASC.getValue(), Boolean.TRUE, null, null);
+        while (!orders.isEmpty()) {
             orders.forEach(AlpacaStreamProcessor::processRemoteOrder);
-            ZonedDateTime newest = orders.get(orders.size() - 1).getSubmittedAt().plus(1, ChronoUnit.MILLIS);
-            orders = ALPACA_ORDERS_API.get(CurrentOrderStatus.OPEN, 50, newest, ZonedDateTime.now(), SortDirection.ASCENDING, Boolean.TRUE, null);
+            OffsetDateTime submittedAt = orders.getLast().getSubmittedAt();
+            if (submittedAt == null) {
+                LOG.error("Order submitted at is null.");
+                return;
+            }
+            OffsetDateTime newest = submittedAt.plus(1, ChronoUnit.MILLIS);
+            orders = ALPACA_ORDERS_API.getAllOrders(OrderStatus.NEW.getValue(), 50, newest.toString(), OffsetDateTime.now().toString(), Sort.ASC.getValue(), Boolean.TRUE, null, null);
         }
     }
 
-    private static void reconcilePositions(Portfolio portfolio) throws AlpacaClientException {
+    private static void reconcilePositions(Portfolio portfolio) throws ApiException {
         portfolio.getCurrencies().stream().filter(currency -> !currency.getSymbol().equals("USD")).forEach(currency -> {
             currency.getCurrencyLedgers().clear();
             currency.setQuantity(BigDecimal.ZERO);
@@ -59,16 +66,14 @@ public class AlpacaUtil {
             security.getSecurityPosition().setOpened(new Date());
         });
 
-        ALPACA_POSITIONS_API.get().forEach(remotePosition -> {
+        ALPACA_POSITIONS_API.getAllOpenPositions().forEach(remotePosition -> {
             String remoteSymbol = remotePosition.getSymbol();
-            BigDecimal remoteQuantity = new BigDecimal(remotePosition.getQuantity());
+            BigDecimal remoteQuantity = new BigDecimal(remotePosition.getQty());
 
-            AssetClassType assetClassType = AssetClassType.get(remotePosition.getAssetClass());
-
-            if (assetClassType.equals(AssetClassType.CRYPTO)) {
+            if (remotePosition.getAssetClass().equals(AssetClass.CRYPTO)) {
                 remoteSymbol = parseAlpacaCryptoSymbol(remoteSymbol);
                 reconcileCurrency(portfolio, remoteSymbol, remoteQuantity, CurrencyType.CRYPTO);
-            } else if (assetClassType.equals(AssetClassType.US_EQUITY)) {
+            } else if (remotePosition.getAssetClass().equals(AssetClass.US_EQUITY)) {
                 reconcileSecurity(portfolio, remotePosition);
             }
         });
@@ -87,8 +92,8 @@ public class AlpacaUtil {
     private static void reconcileSecurity(Portfolio portfolio, Position remotePosition) {
         Security security = Util.getSecurityFromPortfolio(remotePosition.getSymbol(), portfolio);
         SecurityPosition securityPosition = security.getSecurityPosition();
-        BigDecimal remoteQuantity = new BigDecimal(remotePosition.getQuantity());
-        BigDecimal remotePrice = new BigDecimal(remotePosition.getAverageEntryPrice());
+        BigDecimal remoteQuantity = new BigDecimal(remotePosition.getQty());
+        BigDecimal remotePrice = new BigDecimal(remotePosition.getAvgEntryPrice());
 
         LOG.info("{}: Reconciling local security ledger with remote ledger ({}).", security.getSymbol(), remoteQuantity);
         securityPosition.setOpened(new Date());
@@ -99,23 +104,24 @@ public class AlpacaUtil {
     public static void showAlpacaAccountInfo() {
         Account alpacaAccount = null;
         try {
-            alpacaAccount = ALPACA_ACCOUNT_API.get();
-        } catch (AlpacaClientException e) {
+            alpacaAccount = ALPACA_ACCOUNT_API.getAccount();
+        } catch (ApiException e) {
             LOG.error(e.getLocalizedMessage());
         }
 
         if (alpacaAccount != null) {
             LOG.info("\n\nAlpaca Account Information:");
-            LOG.info("\t" + alpacaAccount.toString().replace(",", ",\n\t"));
+            LOG.info("\t{}", alpacaAccount.toString().replace(",", ",\n\t"));
         }
     }
 
     static List<Order> getFilledOrders() {
         try {
             ArrayList<String> symbols = new ArrayList<>();
-            ALPACA_POSITIONS_API.get().forEach(p -> symbols.add(p.getSymbol()));
-            return ALPACA_ORDERS_API.get(CurrentOrderStatus.CLOSED, 500, ZonedDateTime.now().truncatedTo(ChronoUnit.DAYS), ZonedDateTime.now(), SortDirection.ASCENDING, false, symbols);
-        } catch (AlpacaClientException e) {
+            ALPACA_POSITIONS_API.getAllOpenPositions().forEach(p -> symbols.add(p.getSymbol()));
+            String commaSeparatedSymbols = String.join(",", symbols);
+            return ALPACA_ORDERS_API.getAllOrders(OrderStatus.FILLED.getValue(), 500, OffsetDateTime.now().truncatedTo(ChronoUnit.DAYS).toString(), OffsetDateTime.now().toString(), Sort.ASC.getValue(), false, commaSeparatedSymbols, null);
+        } catch (ApiException e) {
             LOG.error(e.getLocalizedMessage());
         }
         return null;
@@ -124,9 +130,12 @@ public class AlpacaUtil {
     static Position getOpenPosition(String symbol) {
         Position position = null;
         try {
-            position = ALPACA_POSITIONS_API.getBySymbol(symbol);
-        } catch (AlpacaClientException e) {
-            if (e.getAPIResponseCode() != null && e.getAPIResponseCode() == 40410000) {
+            position = ALPACA_POSITIONS_API.getOpenPosition(symbol);
+        } catch (ApiException e) {
+            String responseBody = e.getResponseBody();
+            JsonObject jsonObject = JsonParser.parseString(responseBody).getAsJsonObject();
+
+            if (jsonObject.get("code").getAsInt() == 40410000) {
                 LOG.info("No open positions found for {}", symbol);
             } else {
                 LOG.error("Error when searching positions for {}. {}", symbol, e.getLocalizedMessage());
@@ -136,8 +145,8 @@ public class AlpacaUtil {
     }
 
     public static String parseAlpacaCryptoSymbol(String symbol) {
-        if (symbol.length() > 3 && symbol.endsWith("USD")) {
-            return symbol.substring(0, symbol.length() - 3);
+        if (symbol.endsWith("/USD")) {
+            return symbol.substring(0, symbol.length() - 4);
         } else {
             return symbol;
         }
